--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 artifact/**/*.csv filter=lfs diff=lfs merge=lfs -text
 artifact/**/*.npy filter=lfs diff=lfs merge=lfs -text
+*.npy filter=lfs diff=lfs merge=lfs -text
+*.csv filter=lfs diff=lfs merge=lfs -text
